Fix project alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,26 @@ a {
 
 #section2 {
     background-color: #00796B;
+
+}
+
+#section2:before{
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.15;
+    background-image: url('../img/ts.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    -ms-background-size: auto 75%;
+    -o-background-size: auto 75%;
+    -moz-background-size: auto 75%;
+    -webkit-background-size: auto 75%;
+    background-size: auto 75%;
 }
 
 #section2 h1 {
@@ -93,11 +113,16 @@ a {
     padding-bottom: 2%;
 }
 
+.project-wrapper {
+    text-align: center;
+}
+
 .project-placeholder {
     position: relative;
     width: 320px;
     height: 200px;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,77,64 ,0.8);
     border-radius: 7px;
     margin-bottom: 5%;
+    display: inline-block;
 }
